@@ -1,5 +1,10 @@
 v3.0.0
   * Support for Real User Monitoring
+  * Back end work on internals to improve reliability
+  * added a 'log_file_name' and 'log_file_path' configuration variable to allow
+    setting the path and name of the agent log file
+  * Improve reliability of statistics calculations
+  * Remove some previously deprecated methods
 
 v2.14.1
   * Avoid overriding methods named 'log' when including the MethodTracer module
